--- a/Final_Project/css/style.scss
+++ b/Final_Project/css/style.scss
@@ -125,39 +125,42 @@ h1 {
 }
 
 .grid {
-    display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
-    grid-template-rows: 50% 50%;
-    max-width: 1800px;
-    margin: 0 auto;
-    overflow: hidden;
+border-radius: 30px;
+  overflow: hidden;
+  display: grid;
+  grid-template-columns: 25% 1fr 1fr 1fr 25%;
+  grid-template-rows: 2;
+  gap: 2px;
 }
-.grid-item img{
-    max-height: 455px; 
-    text-align: center; 
+ .box{
+    min-height: 100px;
   }
-
-  .wide1{
-    grid-column: 1/3;
-    grid-row: span 1;
+  .g1{
+    grid-column: 1/4;
+    grid-row: 1;
   }
-  .wide2{
-    grid-column: 3/4;
-    grid-row: span 1;
+  
+  .g2{
+    grid-column: 4/6;
+    grid-row: 1;
   }
-  .wide3{
-    grid-column: 1/2;
+  
+  .g3{
+    grid-column: 1;
     grid-row: 2;
   }
-  .wide4{
-    grid-column: 2/4;
+  
+  .g4{
+    grid-column: span 3;
     grid-row: 2;
   }
-  .wide5{
-    grid-column: 4/5;
+  .g5{
+    grid-column: 5;
     grid-row: 2;
   }
-
+  .grid_img{
+    max-height: 435px;
+  }
   .grid_table{
     display: grid;
     grid-template-columns: 22% 39% 39%;
@@ -193,24 +196,6 @@ h1 {
 }
 
 
-.one{
-    grid-column: 1/2;
-    border-radius: 72px 72px 0px 0px;
-}
-.two{
-    grid-column: 2/4;
-    border: none;
-}
-.three{
-    grid-column: 1/2;
-    border-radius: 0px 0px 0px 72px;
-    border-top: none;
-}
-.four{
-    grid-column: 2/3;
-    border: none;
-    border-top:1px solid #151515;
-}
 .five{
     grid-column: 3/4;
     border-radius: 0px 72px 0px 0px;
@@ -305,14 +290,3 @@ section{
     flex-wrap: wrap;
     gap: 10px;
 }
-// .wide {
-//     grid-column: 1/2;
-//     grid-row: 1;
-//     max-width: 910px;
-// }
-
-// .narrow {
-//     grid-column: span 1;
-//     grid-row: span 1;
-//     max-width: 435px;
-// }
