--- a/Final_Project/css/style.css
+++ b/Final_Project/css/style.css
@@ -118,42 +118,49 @@ h1 {
 }
 
 .grid {
-  display: grid;
-  grid-template-columns: 25% 25% 25% 25%;
-  grid-template-rows: 50% 50%;
-  max-width: 1800px;
-  margin: 0 auto;
   overflow: hidden;
+  display: grid;
+  grid-template-columns: 25% 1fr 1fr 1fr 25%;
+  grid-template-rows: 2;
+  gap: 2px;
+  height: 100%;
+  border-radius: 30px;
 }
 
-.grid-item img {
-  max-height: 455px;
-  text-align: center;
+.box {
+  min-height: 100px;
 }
 
-.wide1 {
-  grid-column: 1/3;
-  grid-row: span 1;
+.g1 {
+  grid-column: 1/4;
+  grid-row: 1;
 }
 
-.wide2 {
-  grid-column: 3/4;
-  grid-row: span 1;
+.g2 {
+  grid-column: 4/6;
+  grid-row: 1;
 }
 
-.wide3 {
-  grid-column: 1/2;
+.g3 {
+  grid-column: 1;
   grid-row: 2;
 }
 
-.wide4 {
-  grid-column: 2/4;
+.g4 {
+  grid-column: span 3;
   grid-row: 2;
 }
 
-.wide5 {
-  grid-column: 4/5;
+.g5 {
+  grid-column: 5;
   grid-row: 2;
+}
+
+.grid_img {
+  max-height: 435px;
+  width: 100%;
+  height: 100%;
+  max-width: 1100px;
 }
 
 .grid_table {
@@ -164,7 +171,7 @@ h1 {
 }
 
 .reasons {
-  margin-top: 100px;
+  margin-top: 234px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -200,20 +207,17 @@ h1 {
 }
 
 .two {
-  grid-column: 2/4;
+  grid-column: 2/5;
   border: none;
 }
 
 .three {
   grid-column: 1/2;
   border-radius: 0px 0px 0px 72px;
-  border-top: none;
 }
 
 .four {
   grid-column: 2/3;
-  border: none;
-  border-top: 1px solid #151515;
 }
 
 .five {
@@ -323,4 +327,133 @@ section {
   justify-content: center;
   flex-wrap: wrap;
   gap: 10px;
+}
+
+.form_wrapper {
+  padding-bottom: 100px;
+  display: flex;
+  justify-content: space-between;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.form_input {
+  padding: 20px 60px;
+  width: 100%;
+  min-width: 662px;
+  border-radius: 20px;
+}
+
+.form_button {
+  padding: 20px 60px;
+  color: #fff;
+  text-align: center;
+  background-color: #151515;
+  border-radius: 20px;
+}
+
+.contacts {
+  max-width: 680px;
+  padding: 60px;
+  border: 1px solid #151515;
+}
+
+.user_photo {
+  object-fit: cover;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+}
+
+.card_header_wrapper {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.card_head_text_wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.card_main_text {
+  margin-top: 16px;
+  line-height: 24px;
+  letter-spacing: -0.4px;
+}
+
+.comment_insta {
+  width: 16px;
+  height: 16px;
+}
+
+.comment_header {
+  font-size: 24px;
+  font-weight: 500;
+}
+
+.insta_nick {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.insta_nick_text {
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.one_card {
+  position: relative;
+  min-width: 0;
+  width: 562px;
+  height: 340px;
+  padding: 40px;
+  border: 1px solid #151515;
+  border-radius: 20px;
+  font-family: "Inter", sans-serif;
+}
+
+.see_all {
+  background-color: #fff;
+  border: none;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: rgba(21, 21, 21, 0.5);
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+}
+
+.cards {
+  min-width: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  position: relative;
+}
+.cards .slick-arrow {
+  position: absolute;
+  width: 64px;
+  height: 64px;
+  min-width: 0;
+}
+.cards .slick-prev {
+  left: 10px;
+  background: url("../img/left_arrow.png");
+}
+.cards .slick-next {
+  right: 10px;
+  background: url("../img/right_arrow.png");
+}
+
+.card_section {
+  margin-top: 220px;
+  margin-bottom: 180px;
 }
