--- a/final/src/css/style.scss
+++ b/final/src/css/style.scss
@@ -1,14 +1,14 @@
 $inter:'Inter',
 sans-serif;
 
-@font-face {
-    font-family: 'PP Editorial Old';
-    src: url('../fonts/PPEditorialOld-Italic.woff2') format('woff2'),
-        url('../fonts/PPEditorialOld-Italic.woff') format('woff');
-    font-weight: normal;
-    font-style: italic;
-    font-display: swap;
-}
+// @font-face {
+//     font-family: 'PP Editorial Old';
+//     src: url('../fonts/PPEditorialOld-Italic.woff2') format('woff2'),
+//         url('../fonts/PPEditorialOld-Italic.woff') format('woff');
+//     font-weight: normal;
+//     font-style: italic;
+//     font-display: swap;
+// }
 
 html,
 body {
@@ -50,11 +50,13 @@ header {
     min-height: 100vh;
     align-items: center;
     color: #fff;
+    
 }
 
 .navi_wrapper {
     display: flex;
     justify-content: space-between;
+   
 }
 
 .icon_wrapper {
@@ -408,17 +410,18 @@ form{
         height: 64px;
         min-width: 0;
     }
-    .slick-prev {
-        left: 10px; 
-        background: url('../img/left_arrow.png');
-      }
+    // .slick-prev {
+    //     left: 10px; 
+    //     background: url('../img/left_arrow.png');
+    //   }
       
-      .slick-next {
-        right: 10px; 
-        background: url('../img/right_arrow.png');
-      }
+    //   .slick-next {
+    //     right: 10px; 
+    //     background: url('../img/right_arrow.png');
+    //   }
 }
 .card_section{
     margin-top: 220px;
     margin-bottom: 180px;
 }
+
