--- a/final/src/css/style.scss
+++ b/final/src/css/style.scss
@@ -1,14 +1,14 @@
 $inter:'Inter',
 sans-serif;
 
-// @font-face {
-//     font-family: 'PP Editorial Old';
-//     src: url('../fonts/PPEditorialOld-Italic.woff2') format('woff2'),
-//         url('../fonts/PPEditorialOld-Italic.woff') format('woff');
-//     font-weight: normal;
-//     font-style: italic;
-//     font-display: swap;
-// }
+@font-face {
+    font-family: 'PP Editorial Old';
+    src: url('../fonts/PPEditorialOld-Italic.woff2') format('woff2'),
+        url('../fonts/PPEditorialOld-Italic.woff') format('woff');
+    font-weight: normal;
+    font-style: italic;
+    font-display: swap;
+}
 
 html,
 body {
